<resources>
    <string name="app_name">Kana Training</string>
    <string name="first_title">Easy to Use</string>
    <string name="second_title">Interesting</string>
    <string name="third_title">Illustrations Ideas</string>
    <string name="first_description">Learning made easy through fun</string>
    <string name="second_description">Educative and addictive quiz game for you</string>
    <string name="third_description">Illustrations so fun and interesting</string>


    <string name="QuizResult_Clear1">Perfect!</string>
    <string name="QuizResult_Clear2">Good!</string>
    <string name="QuizResult_Clear3">You can do it!</string>
    <string name="QuizResult_Score">Score</string>
    <string name="QuizResult_BestTime">BestTime</string>
    <string name="QuizResult_Button2">Try Again</string>
    <string name="QuizResult_Button1">Quiz Menu</string>

    <string name="facebook_app_id">1972715876321373</string>
    <string name="fb_login_protocol_scheme">fb1972715876321373</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOG OUT</string>
    <string name="name">Fullname</string>
    <string name="already_registered_login">Already registered! Login</string>
    <string name="no_registration">If used without registration your score will not be stored</string>
    <string name="email_verification">Email id not verified. Please verify email id first.</string>
    <string name="forgotten_password">We will send you instructions on how to reset your password by email</string>

    <string name="rule_one">1. Answer the question as fast as you can to save time</string>
    <string name="rule_two">2. You have a maximum of 15 seconds to answer each question</string>
    <string name="rule_three">3. You have 3 lives and after that you loss the quiz game. See testing the quiz also</string>
    <string name="rule_four">4. For 10 correct answers in a row you will gain extra bonus life.</string>
    <string name="rule_five">5. If you finish a particular quiz before the allocated time you will gain extra point going into a new quiz game</string>
    <string name="continue_button">CONTINUE</string>
    <string name="home">Home</string>
    <string name="ladder_board">Ladder Board</string>
    <string name="settings">Settings</string>

    <string name="language_prompt">Choose a language</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="has_registered_login">Has registered. Login</string>

    <string-array name="language_arrays">
        <item>English</item>
        <item>French</item>
        <item>Spain</item>
        <item>German</item>
        <item>Korean</item>
        <item>Hindu</item>
    </string-array>
    <string name="title_activity_home">General Quiz</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="quiz_mart">Quiz Topics</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sound">Sound</string>
    <string name="music">Music</string>
    <string name="language">Language</string>
    <string name="loading">Loading…</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="activity_animation_duration">100</string>
    <string name="alphabet">Alphabet</string>
    <string name="IllustTop_ViewName">Kana Training</string>
    <string name="QuizQuestion_Title">Select rows</string>
    <string name="QuizQuestion_Button">Ready, Go!</string>
    <string name="QuizResult_Time">Time</string>
    <string name="QuizStopPop_Guide">Quit and return to top</string>
    <string name="QuizAnswer_Button">Next</string>

    <string name="FONT_NAME_FIRA_BOOK">FiraSans-BookItalic.otf</string>;
    <string name="FONT_NAME_FIRA_EXTRA">"FiraSans-ExtraBoldItalic.otf"</string>;
    <string name="FONT_NAME_FIRA_LIGHT"> "FiraSans-LightItalic.otf"</string>;
    <string name="FONT_NAME_FIRA_ULTRA">"FiraSans-UltraItalic.otf"</string>;
    <string name="FONT_NAME_KYOKASHO">"IwaTxtPro-Db_app.otf"</string>;
    <string name="FONT_NAME_LETTER">"LetterGothicStd-Slanted.otf"</string>;

    <string name="no_Button">No</string>
    <string name="yes_Button">Yes</string>
    <string name="timeStart">0.00</string>
    <string name="halfscore">5/10</string>

    <string name="Quiz_Question1">Read the Hiragana</string>
    <string name="Quiz_Question2">Choose the Hiragana</string>
    <string name="Quiz_Question3">Listen &amp; Choose</string>
    <string name="Quiz_Question4">Similar Hiragana</string>
    <string name="QuizQuestion1_ViewName">Read the Hiragana</string>
    <string name="QuizQuestion2_ViewName">Choose the Hiragana</string>
    <string name="QuizQuestion3_ViewName">Listen &amp; Choose</string>
    <string name="QuizQuestion4_ViewName">Similar Hiragana</string>


    <string name="Quiz_Question5">Read the Katakana</string>
    <string name="Quiz_Question6">Choose the Katakana</string>
    <string name="Quiz_Question7">Listen &amp; Choose</string>
    <string name="Quiz_Question8">Similar Katakana</string>
    <string name="QuizQuestion5_ViewName">Read the Katakana</string>
    <string name="QuizQuestion6_ViewName">Choose the Katakana</string>
    <string name="QuizQuestion7_ViewName">Listen &amp; Choose</string>
    <string name="QuizQuestion8_ViewName">Similar Katakana</string>


    <string name="QuizAnswer_ViewName1">Read the Hiragana</string>
    <string name="QuizAnswer_ViewName2">Choose the Hiragana</string>
    <string name="QuizAnswer_ViewName3">Listen &amp; Choose</string>
    <string name="QuizAnswer_ViewName4">Similar Hiragana</string>


    <string name="IllustDetail_ViewName">Kana Training</string>
    <string name="IllustTextPop_ViewName">Kana Training</string>
    <string name="IllustEndPop_ViewName">Kana Training</string>
    <string name="IllustEndPop_Button1">Go to next row</string>
    <string name="IllustEndPop_Button2">See again</string>
    <string name="IllustEndPop_Button3">Back to top</string>

    <string name="SelectLine_ViewName">Kana Training</string>
</resources>
