<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.nhombabon.kanatraining.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_24sdp"
            android:paddingRight="@dimen/_24sdp">

            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:contentDescription="@string/app_name"
                android:layout_gravity="center"
                android:src="@drawable/bookone" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/first_title"
                android:textColor="@color/white"
                android:layout_marginTop="@dimen/_16sdp"
                android:layout_marginBottom="@dimen/_12sdp"
                android:textSize="@dimen/_22sdp" />

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/colorSecondaryText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="@dimen/_12sdp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/colorSecondaryText" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:padding="@dimen/_16sdp"
                android:background="@color/colorIcons"
                android:elevation="20dp"
                android:text="@string/btn_login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/forgotten_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="Forgotten Password"
                android:layout_marginTop="@dimen/_12sdp"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <TextView
            android:id="@+id/link_to_registration"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/btn_link_to_register"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>