<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.nhombabon.kanatraining.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:layout_above="@+id/link_to_login"
            android:layout_marginBottom="@dimen/_24sdp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">


            <ImageView
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:paddingBottom="20dp"
                android:src="@drawable/bookone" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="20dp"
                android:text="Complete Quiz"
                android:textColor="@color/white"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_name"
                android:inputType="textCapWords"
                android:padding="16dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/email"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:padding="16dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@color/white"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dip"
                android:background="@color/colorIcons"
                android:padding="@dimen/_16sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white" />


        </LinearLayout>

        <TextView
            android:id="@+id/link_to_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/has_registered_login"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>