<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:gravity="center"
        android:layout_marginTop="50dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/sound"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/music"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>

        <Switch
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:layout_height="wrap_content" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:textSize="18sp"
            android:text="@string/language"
            android:textStyle="bold"
            android:textColor="@color/colorPrimaryText"
            android:layout_alignParentLeft="true"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"/>


        <Spinner
            android:spinnerMode="dropdown"
            android:layout_height="40dp"
            android:id="@+id/spinner"
            android:layout_alignParentRight="true"
            android:background="@drawable/custom_spinner_background"
            android:layout_width="150dp"
            />

    </RelativeLayout>

</LinearLayout>
