<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_social_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.nhombabon.kanatraining.LoginOptionActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_24sdp"
            android:paddingRight="@dimen/_24sdp">


            <ImageView
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_110sdp"
                android:layout_gravity="center"
                android:src="@drawable/bookone" />

            <TextView
                android:id="@+id/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="@dimen/_12sdp"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/first_title"
                android:textColor="@color/white"
                android:textSize="@dimen/_22sdp" />

            <Button
                android:id="@+id/sign_in"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_24sdp"
                android:background="@color/facebookColor"
                android:padding="@dimen/_12sdp"
                android:text="SIGN IN"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/sign_up"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/googleColor"
                android:padding="@dimen/_12sdp"
                android:text="SIGN UP"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/without_login"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@color/colorAccent"
                android:padding="@dimen/_12sdp"
                android:text="WITHOUT LOGIN"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/login_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/_16sdp"
                android:text="@string/already_registered_login"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/_11sdp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/no_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/no_registration"
            android:textColor="@color/colorWhite" />

    </RelativeLayout>

</LinearLayout>